--- a/browser/css/color-palette.css
+++ b/browser/css/color-palette.css
@@ -28,6 +28,7 @@
 	--brightness-stylesview: 1;
 
 	--color-canvas: #f0f0f0;
+	--color-scrollbar-thumb: #7E8182;
 
 	--color-primary: #0b87e7; /* border-color */
 	--color-primary-text: #fff; /* text color when primary-lighter is background */
